--- a/package.json
+++ b/package.json
@@ -9,17 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.14",
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/native": "^6.1.3",
+    "@react-navigation/stack": "^6.3.16",
     "@shopify/flash-list": "^1.4.1",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-bouncy-checkbox": "^3.0.7",
+    "react-native-dashed-line": "^1.1.0",
+    "react-native-element-dropdown": "^2.6.0",
+    "react-native-floating-label-input": "^1.4.2",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-paper": "^5.2.0",
+    "react-native-paper-dates": "^0.12.0",
+    "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-switch-selector": "^2.3.0",
     "react-native-web": "~0.18.9"
   },
   "devDependencies": {
