--- a/package.json
+++ b/package.json
@@ -14,16 +14,23 @@
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/stack": "^6.3.16",
     "@shopify/flash-list": "^1.4.1",
+    "date-fns": "^2.29.3",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "moment": "^2.29.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-bouncy-checkbox": "^3.0.7",
+    "react-native-collapsible": "^1.6.0",
     "react-native-dashed-line": "^1.1.0",
     "react-native-element-dropdown": "^2.6.0",
     "react-native-floating-label-input": "^1.4.2",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-mask-input": "^1.2.3",
+    "react-native-masked-text": "^1.13.0",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-paper": "^5.2.0",
     "react-native-paper-dates": "^0.12.0",
     "react-native-reanimated": "~2.12.0",
