--- a/package.json
+++ b/package.json
@@ -16,15 +16,20 @@
     "@shopify/flash-list": "^1.4.1",
     "date-fns": "^2.29.3",
     "expo": "~47.0.12",
+    "expo-image-manipulator": "~11.0.0",
+    "expo-image-picker": "~14.0.2",
     "expo-status-bar": "~1.4.2",
     "moment": "^2.29.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-animated-scroll-indicators": "^1.0.1",
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-collapsible": "^1.6.0",
     "react-native-dashed-line": "^1.1.0",
+    "react-native-dialog": "^9.3.0",
     "react-native-element-dropdown": "^2.6.0",
+    "react-native-flatlist-slider": "^1.0.6",
     "react-native-floating-label-input": "^1.4.2",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
