--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.14",
     "@react-navigation/bottom-tabs": "^6.5.4",
+    "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/stack": "^6.3.16",
     "@shopify/flash-list": "^1.4.1",
@@ -36,6 +37,7 @@
     "react-native-mask-input": "^1.2.3",
     "react-native-masked-text": "^1.13.0",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-native-pager-view": "6.0.1",
     "react-native-paper": "^5.2.0",
     "react-native-paper-dates": "^0.12.0",
     "react-native-reanimated": "~2.12.0",
