--- a/package.json
+++ b/package.json
@@ -10,26 +10,25 @@
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.14",
-    "@react-navigation/bottom-tabs": "^6.5.4",
+    "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/material-top-tabs": "^6.6.2",
-    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@shopify/flash-list": "^1.4.1",
-    "date-fns": "^2.29.3",
-    "expo": "~47.0.12",
-    "expo-image-manipulator": "~11.0.0",
-    "expo-image-picker": "~14.0.2",
-    "expo-status-bar": "~1.4.2",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "expo": "~48.0.5",
+    "expo-image-manipulator": "^11.1.1",
+    "expo-image-picker": "^14.1.1",
+    "expo-status-bar": "~1.4.4",
     "moment": "^2.29.4",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.5",
+    "react": "18.2.0",
+    "react-native": "0.71.3",
     "react-native-animated-scroll-indicators": "^1.0.1",
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-collapsible": "^1.6.0",
     "react-native-dashed-line": "^1.1.0",
     "react-native-dialog": "^9.3.0",
-    "react-native-element-dropdown": "^2.6.0",
+    "react-native-element-dropdown": "^2.8.0",
     "react-native-flatlist-slider": "^1.0.6",
     "react-native-floating-label-input": "^1.4.2",
     "react-native-gesture-handler": "^2.9.0",
@@ -37,14 +36,14 @@
     "react-native-mask-input": "^1.2.3",
     "react-native-masked-text": "^1.13.0",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
-    "react-native-pager-view": "6.0.1",
+    "react-native-pager-view": "^6.1.4",
     "react-native-paper": "^5.2.0",
     "react-native-paper-dates": "^0.12.0",
-    "react-native-reanimated": "~2.12.0",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0",
     "react-native-switch-selector": "^2.3.0",
-    "react-native-web": "~0.18.9"
+    "react-native-web": "^0.18.12",
+    "react-native-reanimated": "~2.14.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
