--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@shopify/flash-list": "^1.4.1",
-    "babel-plugin-module-resolver": "^5.0.0",
     "expo": "~48.0.5",
     "expo-image-manipulator": "^11.1.1",
     "expo-image-picker": "^14.1.1",
@@ -39,16 +38,17 @@
     "react-native-pager-view": "^6.1.4",
     "react-native-paper": "^5.2.0",
     "react-native-paper-dates": "^0.12.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-switch-selector": "^2.3.0",
-    "react-native-web": "^0.18.12",
-    "react-native-reanimated": "~2.14.4"
+    "react-native-web": "^0.18.12"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "babel-plugin-module-resolver": "^5.0.0",
     "typescript": "^4.6.3"
   },
   "private": true
