--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/checkbox": "^0.5.14",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/material-top-tabs": "^6.6.2",
@@ -18,6 +19,7 @@
     "expo": "~48.0.5",
     "expo-image-manipulator": "^11.1.1",
     "expo-image-picker": "^14.1.1",
+    "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
     "moment": "^2.29.4",
     "react": "18.2.0",
@@ -25,6 +27,7 @@
     "react-native-animated-scroll-indicators": "^1.0.1",
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-collapsible": "^1.6.0",
+    "react-native-cookies": "^3.3.0",
     "react-native-dashed-line": "^1.1.0",
     "react-native-dialog": "^9.3.0",
     "react-native-element-dropdown": "^2.8.0",
