--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.4.5",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/checkbox": "^0.5.14",
     "@react-navigation/bottom-tabs": "^6.5.7",
@@ -34,7 +35,7 @@
     "react-native-element-dropdown": "^2.8.0",
     "react-native-flatlist-slider": "^1.0.6",
     "react-native-floating-label-input": "^1.4.2",
-    "react-native-gesture-handler": "^2.9.0",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-mask-input": "^1.2.3",
     "react-native-masked-text": "^1.13.0",
