--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@shopify/flash-list": "^1.4.1",
+    "axios": "^1.3.4",
     "expo": "~48.0.5",
     "expo-image-manipulator": "^11.1.1",
     "expo-image-picker": "^14.1.1",
