--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "@react-navigation/stack": "^6.3.16",
     "@shopify/flash-list": "^1.4.1",
     "axios": "^1.3.4",
+    "axios-cache-interceptor": "^1.0.1",
+    "cloudinary": "^1.35.0",
     "expo": "~48.0.5",
+    "expo-app-loading": "^2.1.1",
     "expo-image-manipulator": "^11.1.1",
     "expo-image-picker": "^14.1.1",
+    "expo-linear-gradient": "~12.1.2",
     "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
     "lottie-react-native": "^5.1.5",
@@ -52,7 +56,7 @@
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-switch-selector": "^2.3.0",
     "react-native-web": "^0.18.12",
-    "expo-linear-gradient": "~12.1.2"
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
