--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-skeleton-content": "^1.0.28",
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-switch-selector": "^2.3.0",
     "react-native-web": "^0.18.12",
