--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/blur": "^4.3.0",
     "@react-native-community/checkbox": "^0.5.14",
     "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
@@ -33,6 +34,7 @@
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-animated-scroll-indicators": "^1.0.1",
+    "react-native-backdrop": "^2.1.2",
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-bouncy-checkbox-group": "^0.1.1",
     "react-native-collapsible": "^1.6.0",
@@ -46,6 +48,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-mask-input": "^1.2.3",
     "react-native-masked-text": "^1.13.0",
+    "react-native-modal": "^13.0.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-pager-view": "^6.1.4",
     "react-native-paper": "^5.2.0",
