--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-switch-selector": "^2.3.0",
     "react-native-web": "^0.18.12",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "expo-updates": "~0.16.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
