--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "react-native-switch-selector": "^2.3.0",
     "react-native-web": "^0.18.12",
     "react-query": "^3.39.3",
-    "expo-updates": "~0.16.4"
+    "expo-updates": "~0.16.4",
+    "expo-font": "~11.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
