--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "cloudinary": "^1.35.0",
     "expo": "~48.0.5",
     "expo-app-loading": "^2.1.1",
+    "expo-font": "~11.1.1",
     "expo-image-manipulator": "^11.1.1",
     "expo-image-picker": "^14.1.1",
     "expo-linear-gradient": "~12.1.2",
     "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "lottie-react-native": "^5.1.5",
     "moment": "^2.29.4",
     "react": "18.2.0",
@@ -60,9 +62,7 @@
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-switch-selector": "^2.3.0",
     "react-native-web": "^0.18.12",
-    "react-query": "^3.39.3",
-    "expo-updates": "~0.16.4",
-    "expo-font": "~11.1.1"
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
