--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "petfinder_app",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -22,6 +21,7 @@
     "axios": "^1.3.4",
     "axios-cache-interceptor": "^1.0.1",
     "cloudinary": "^1.35.0",
+    "eas-cli": "^3.13.0",
     "expo": "~48.0.5",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~11.1.1",
@@ -29,12 +29,13 @@
     "expo-image-picker": "^14.1.1",
     "expo-linear-gradient": "~12.1.2",
     "expo-secure-store": "~12.1.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
     "lottie-react-native": "^5.1.4",
     "moment": "^2.29.4",
     "react": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.71.7",
     "react-native-animated-scroll-indicators": "^1.0.1",
     "react-native-backdrop": "^2.1.2",
     "react-native-bouncy-checkbox": "^3.0.7",
