--- a/package.json
+++ b/package.json
@@ -1,76 +1,59 @@
 {
-  "name": "petfinder_app",
+  "name": "mira_app",
   "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@gorhom/bottom-sheet": "^4.4.5",
-    "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-native-community/blur": "^4.3.0",
-    "@react-native-community/checkbox": "^0.5.14",
+    "@gorhom/bottom-sheet": "^4.4.6",
+    "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-native-community/blur": "^4.3.2",
+    "@react-native-community/checkbox": "^0.5.15",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
-    "@shopify/flash-list": "^1.4.0",
-    "axios": "^1.3.4",
-    "axios-cache-interceptor": "^1.0.1",
-    "cloudinary": "^1.35.0",
-    "eas-cli": "^3.13.0",
-    "expo": "~48.0.5",
+    "axios": "^1.4.0",
+    "cloudinary": "^1.37.0",
+    "expo": "~48.0.15",
     "expo-app-loading": "^2.1.1",
-    "expo-font": "~11.1.1",
+    "expo-font": "^11.1.1",
     "expo-image-manipulator": "^11.1.1",
     "expo-image-picker": "^14.1.1",
-    "expo-linear-gradient": "~12.1.2",
-    "expo-secure-store": "~12.1.1",
-    "expo-splash-screen": "~0.18.2",
+    "expo-linear-gradient": "^12.1.2",
+    "expo-secure-store": "^12.1.1",
+    "expo-splash-screen": "^0.18.2",
     "expo-status-bar": "~1.4.4",
-    "expo-updates": "~0.16.4",
-    "lottie-react-native": "^5.1.4",
+    "expo-updates": "^0.16.4",
+    "lottie-react-native": "^5.1.6",
     "moment": "^2.29.4",
     "react": "18.2.0",
-    "react-native": "0.71.7",
+    "react-native": "0.71.8",
     "react-native-animated-scroll-indicators": "^1.0.1",
-    "react-native-backdrop": "^2.1.2",
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-bouncy-checkbox-group": "^0.1.1",
-    "react-native-collapsible": "^1.6.0",
-    "react-native-cookies": "^3.3.0",
     "react-native-dashed-line": "^1.1.0",
     "react-native-dialog": "^9.3.0",
-    "react-native-element-dropdown": "^2.8.0",
+    "react-native-element-dropdown": "^2.9.0",
     "react-native-flatlist-slider": "^1.0.6",
-    "react-native-floating-label-input": "^1.4.2",
-    "react-native-gesture-handler": "~2.9.0",
+    "react-native-gesture-handler": "^2.10.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-mask-input": "^1.2.3",
-    "react-native-masked-text": "^1.13.0",
     "react-native-modal": "^13.0.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
-    "react-native-pager-view": "^6.1.2",
-    "react-native-paper": "^5.2.0",
-    "react-native-paper-dates": "^0.12.0",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.20.0",
-    "react-native-skeleton-content": "^1.0.28",
-    "react-native-skeleton-placeholder": "^5.2.4",
-    "react-native-switch-selector": "^2.3.0",
-    "react-native-web": "^0.18.12",
-    "react-query": "^3.39.3"
+    "react-native-paper": "^5.8.0",
+    "react-native-reanimated": "^2.14.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
-    "@types/react-native": "~0.70.6",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "typescript": "^4.6.3"
+    "@types/react-native": "^0.72.1",
+    "typescript": "^4.9.4"
   },
   "private": true
 }
