--- a/package.json
+++ b/package.json
@@ -9,27 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@gorhom/bottom-sheet": "^4.4.6",
     "@react-native-async-storage/async-storage": "^1.18.1",
-    "@react-native-community/blur": "^4.3.2",
-    "@react-native-community/checkbox": "^0.5.15",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.4.0",
-    "cloudinary": "^1.37.0",
+    "eas-cli": "^3.13.1",
     "expo": "~48.0.15",
-    "expo-app-loading": "^2.1.1",
-    "expo-font": "^11.1.1",
-    "expo-image-manipulator": "^11.1.1",
-    "expo-image-picker": "^14.1.1",
-    "expo-linear-gradient": "^12.1.2",
-    "expo-secure-store": "^12.1.1",
-    "expo-splash-screen": "^0.18.2",
+    "expo-image-manipulator": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
+    "expo-linking": "~4.0.1",
     "expo-status-bar": "~1.4.4",
-    "expo-updates": "^0.16.4",
     "lottie-react-native": "^5.1.6",
     "moment": "^2.29.4",
     "react": "18.2.0",
@@ -41,18 +34,19 @@
     "react-native-dialog": "^9.3.0",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-flatlist-slider": "^1.0.6",
-    "react-native-gesture-handler": "^2.10.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-mask-input": "^1.2.3",
-    "react-native-modal": "^13.0.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.8.0",
-    "react-native-reanimated": "^2.14.4"
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-tab-view": "^3.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
-    "@types/react-native": "^0.72.1",
+    "@types/react-native": "^0.72.2",
     "typescript": "^4.9.4"
   },
   "private": true
