--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Mira_app",
-    "slug": "Mira_app",
+    "name": "mira_app_expo",
+    "slug": "mira_app_expo",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -15,8 +15,7 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "jervi.dev"
+      "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
@@ -26,7 +25,7 @@
       "permissions": [
         "android.permission.RECORD_AUDIO"
       ],
-      "package": "jervi.dev"
+      "package": "com.jervi.mira_app_expo"
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -41,7 +40,7 @@
     ],
     "extra": {
       "eas": {
-        "projectId": "6524046c-1377-47b1-ad85-21c8d6aca93c"
+        "projectId": "7aa21252-fec2-4bec-8c3d-53d60e61f486"
       }
     }
   }
