--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mira_app",
+  "name": "mira_app_expo",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,33 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@gorhom/bottom-sheet": "^4.4.6",
     "@react-native-async-storage/async-storage": "1.17.11",
-    "@react-native-community/blur": "^4.3.2",
-    "@react-native-community/checkbox": "^0.5.15",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.4.0",
-    "cloudinary": "^1.37.0",
-    "expo": "~48.0.15",
-    "expo-app-loading": "^2.1.1",
-    "expo-font": "^11.1.1",
-    "expo-image-manipulator": "^11.1.1",
-    "expo-image-picker": "^14.1.1",
-    "expo-linear-gradient": "^12.1.2",
-    "expo-secure-store": "^12.1.1",
-    "expo-splash-screen": "^0.18.2",
+    "expo": "~48.0.18",
+    "expo-image-manipulator": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
-    "expo-updates": "^0.16.4",
     "lottie-react-native": "5.1.4",
-    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-animated-scroll-indicators": "^1.0.1",
-    "react-native-bouncy-checkbox": "^3.0.7",
+    "react-native-bouncy-checkbox": "^2.1.5",
     "react-native-bouncy-checkbox-group": "^0.1.1",
     "react-native-dashed-line": "^1.1.0",
     "react-native-dialog": "^9.3.0",
@@ -46,13 +35,18 @@
     "react-native-mask-input": "^1.2.3",
     "react-native-modal": "^13.0.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.8.0",
-    "react-native-reanimated": "^2.14.4"
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-tab-view": "^3.5.1",
+    "expo-device": "~5.2.1",
+    "expo-image": "~1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
-    "@types/react-native": "^0.72.1",
     "typescript": "^4.9.4"
   },
   "private": true
