--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
+    "expo-device": "~5.2.1",
+    "expo-image": "~1.0.1",
     "expo-image-manipulator": "~11.1.1",
     "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
@@ -37,12 +39,12 @@
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.8.0",
+    "react-native-password-strength-meter-bar": "^1.2.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-tab-view": "^3.5.1",
-    "expo-device": "~5.2.1",
-    "expo-image": "~1.0.1"
+    "react-password-strength-bar": "^0.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
