--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "expo-image": "~1.0.1",
     "expo-image-manipulator": "~11.1.1",
     "expo-image-picker": "~14.1.1",
+    "expo-linking": "~4.0.1",
     "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
+    "lodash": "^4.17.21",
     "lottie-react-native": "5.1.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
@@ -45,8 +47,7 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-tab-view": "^3.5.1",
-    "expo-linking": "~4.0.1"
+    "react-native-tab-view": "^3.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
