reStructuring project tree, and done with M1

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
       "@screens/*": ["./screens/*"],
       "@constants/*": ["./constants/*"],
       "@assets/*": ["./assets/*"],
+      "@context/*": ["./context/*"],
+      "@utils/*": ["./utils/*"],
     }
   }
 }
