--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.4.0",
-    "expo": "~48.0.18",
+    "expo": "^49.0.10",
     "expo-device": "~5.2.1",
     "expo-image": "~1.0.1",
     "expo-image-manipulator": "~11.1.1",
@@ -44,7 +44,7 @@
     "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.8.0",
     "react-native-password-strength-meter-bar": "^1.2.0",
-    "react-native-reanimated": "~2.14.4",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-tab-view": "^3.5.1"
