--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-tab-view": "^3.5.1"
+    "react-native-tab-view": "^3.5.1",
+    "expo-updates": "~0.18.17"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
