--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.4.0",
     "expo": "^49.0.10",
@@ -25,6 +26,7 @@
     "expo-linking": "~5.0.2",
     "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.17",
     "lodash": "^4.17.21",
     "lottie-react-native": "5.1.6",
     "react": "18.2.0",
@@ -47,8 +49,7 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-tab-view": "^3.5.1",
-    "expo-updates": "~0.18.17"
+    "react-native-tab-view": "^3.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
