--- a/package.json
+++ b/package.json
@@ -17,20 +17,22 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.16",
+    "@shopify/flash-list": "1.4.3",
     "axios": "^1.4.0",
     "expo": "^49.0.10",
     "expo-device": "~5.4.0",
-    "expo-image": "~1.3.2",
+    "expo-image": "^1.3.4",
     "expo-image-manipulator": "~11.3.0",
     "expo-image-picker": "~14.3.2",
     "expo-linking": "~5.0.2",
+    "expo-location": "~16.1.0",
     "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.17",
     "lodash": "^4.17.21",
     "lottie-react-native": "5.1.6",
     "react": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "^0.72.6",
     "react-native-animated-scroll-indicators": "^1.0.1",
     "react-native-bouncy-checkbox": "^2.1.5",
     "react-native-bouncy-checkbox-group": "^0.1.1",
@@ -49,8 +51,7 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-tab-view": "^3.5.1",
-    "expo-location": "~16.1.0"
+    "react-native-tab-view": "^3.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
