--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/html-elements": "^0.4.2",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/netinfo": "^11.1.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/material-top-tabs": "^6.6.2",
@@ -21,7 +22,7 @@
     "axios": "^1.4.0",
     "expo": "^49.0.10",
     "expo-device": "~5.4.0",
-    "expo-image": "^1.3.4",
+    "expo-image": "^1.3.5",
     "expo-image-manipulator": "~11.3.0",
     "expo-image-picker": "~14.3.2",
     "expo-linking": "~5.0.2",
@@ -51,7 +52,8 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-tab-view": "^3.5.1"
+    "react-native-tab-view": "^3.5.1",
+    "react-native-toast-message": "^2.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
